--- a/Snapp.xcodeproj/xcshareddata/xcschemes/Snapp.xcscheme
+++ b/Snapp.xcodeproj/xcshareddata/xcschemes/Snapp.xcscheme
@@ -58,6 +58,7 @@
       buildConfiguration = "Debug"
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
+      enableThreadSanitizer = "YES"
       language = "ru"
       launchStyle = "0"
       useCustomWorkingDirectory = "NO"
@@ -75,6 +76,13 @@
             ReferencedContainer = "container:Snapp.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
+      <AdditionalOptions>
+         <AdditionalOption
+            key = "NSZombieEnabled"
+            value = "YES"
+            isEnabled = "YES">
+         </AdditionalOption>
+      </AdditionalOptions>
    </LaunchAction>
    <ProfileAction
       buildConfiguration = "Debug"
