--- a/Snapp.xcodeproj/xcshareddata/xcschemes/Snapp.xcscheme
+++ b/Snapp.xcodeproj/xcshareddata/xcschemes/Snapp.xcscheme
@@ -58,7 +58,6 @@
       buildConfiguration = "Debug"
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
-      enableThreadSanitizer = "YES"
       language = "ru"
       launchStyle = "0"
       useCustomWorkingDirectory = "NO"
@@ -78,8 +77,8 @@
       </BuildableProductRunnable>
       <AdditionalOptions>
          <AdditionalOption
-            key = "NSZombieEnabled"
-            value = "YES"
+            key = "MallocStackLogging"
+            value = ""
             isEnabled = "YES">
          </AdditionalOption>
       </AdditionalOptions>
